--- a/Ticks/src/App.css
+++ b/Ticks/src/App.css
@@ -100,15 +100,17 @@
   border-radius: 12px;
   gap: 8px;
   flex-direction: column;
+  padding: 18px 0px;
 }
 
 .todosWarper ul {
   display: flex;
-  padding: 0;
+  padding: 0px 0px;
   justify-content: center;
   align-items: center;
   gap: 12px;
   width: 100%;
+  margin: 0;
 }
 
 .todosWarper p {
@@ -122,6 +124,19 @@
   padding: 0 19px;
 }
 
+.todosWarper input {
+  width: 100%;
+  height: 52px;
+  background-color: #e8e8e8;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  padding: 0 19px;
+  margin-left: 18px;
+  border: none;
+}
+
 .todosWarper button {
   height: 52px;
   width: fit-content;
@@ -130,4 +145,5 @@
   background-color: #e8e8e8;
   font-size: 18px;
   padding: 0 14px;
+  margin-right: 18px;
 }
