--- a/Ticks/src/App.css
+++ b/Ticks/src/App.css
@@ -98,7 +98,7 @@
   background-color: #f0f0f0;
   width: 100%;
   border-radius: 12px;
-  gap: 8px;
+  gap: 24px;
   flex-direction: column;
   padding: 18px 0px;
 }
@@ -114,7 +114,7 @@
 }
 
 .todosWarper p {
-  width: 424px;
+  width: 100%;
   height: 52px;
   background-color: #e8e8e8;
   border-radius: 12px;
@@ -122,6 +122,10 @@
   align-items: center;
   font-size: 18px;
   padding: 0 19px;
+  margin-left: 18px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  border: none;
 }
 
 .todosWarper input {
@@ -145,5 +149,13 @@
   background-color: #e8e8e8;
   font-size: 18px;
   padding: 0 14px;
+  min-width: fit-content;
+}
+
+.todosWarper button:last-child {
   margin-right: 18px;
 }
+
+/* .completed p {
+  background-color: rgb(199, 253, 199);
+} */
